--- a/app.json
+++ b/app.json
@@ -8,9 +8,9 @@
         "telegram-bot",
         "botzhub"
     ],
-    "repository": "https://github.com/xditya/TelethonBot",
-    "website": "xditya.me",
-    "success_url": "https://t.me/BotzHub",
+    "repository": "https://github.com/botocgaixinh/Telegram",
+    "website": "ritiensinh.com",
+    "success_url": "https://t.me/RyoStar",
     "env": {
         "API_HASH": {
             "description": "You API HASH from my.telegram.org",
