--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
         "telegram",
         "telethon",
         "telegram-bot",
-        "botzhub"
+        "ryostar"
     ],
     "repository": "https://github.com/botocgaixinh/Telegram",
     "website": "ritiensinh.com",
